automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 
   <img src="images/adam.jpg" alt="">
   <img src="images/adam.jpg" alt="Avi">
-  <img src="images/spencer.jpg" alt="Spencer" target="_blank">
+  <img src="images/spencer.jpg" alt="Spencer">
 
 </body>
-</html>
 </head>
+</html>
+
